<resources>

    <string name="app_name">时分计算器</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_caculator">时分计算器</string>
    
    <!-- 按键 -->
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="colon">:</string>
    <string name="calculator">=</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="multiply">×</string>
    <string name="divide">÷</string>
    <string name="clear">c</string>
    
    <!-- 结果框 -->
    <string name="result">结果在这里</string>
    
</resources>